[tool.poetry]
name = "kitbox"
version = "0.1.0"
description = ""
authors = ["Ranshi <782938005@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
toml = "^0.10.2"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
